kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snakes-and-ladders-nginx
spec:
  selector:
    app: snakes-and-ladders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
